--- a/docs/docs/.vuepress/styles/index.styl
+++ b/docs/docs/.vuepress/styles/index.styl
@@ -33,6 +33,8 @@
 
 
 .api-event + table tr td:nth-child(1) { white-space: nowrap; }
+.api-inteface + table tr td:nth-child(2) { white-space: nowrap; }
+.api-inteface + table tr td:nth-child(3) { width:35px; }
 .mobile-api + table tr td:nth-child(1) { width: 180px;word-break: break-all; }
 .custom-api + table tr td:nth-child(2) { width: 48px; }
 .custom-api + table tr td:nth-child(3) { width: 48px; }
