update sidebar top el

--- a/docs/docs/.vuepress/styles/index.styl
+++ b/docs/docs/.vuepress/styles/index.styl
@@ -31,6 +31,13 @@
     &:active
         opacity: 0.9;
 
+.swiper-pagination
+    .swiper-pagination-bullet
+        width: 22px !important;
+        height: 3px !important;
+        border-radius: 2px !important;
+    .swiper-pagination-bullet-active
+        background: #3eaf7c !important
 
 .api-event + table tr td:nth-child(1) { white-space: nowrap; }
 .api-inteface + table tr td:nth-child(2) { white-space: nowrap; }
