--- a/docs/docs/.vuepress/styles/index.styl
+++ b/docs/docs/.vuepress/styles/index.styl
@@ -10,6 +10,7 @@
     }
 
 .navbar
+    z-index: 10;
     .site-name
         font-family: "Dosis", "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
         font-style: italic;
